# ClosestPoint

./: CMakeLists.txt  ClosestPoint.sln  pch.h
Algo/: BruteForce.cpp  BruteForce.h  ClosestPointsAlgo.cpp  ClosestPointsAlgo.h
ClosestPoint/: ClosestPoint.vcxproj  ClosestPoint.vcxproj.filters  main.cpp  pch.h
ClosestPoint/Algo/: BruteForce.cpp  BruteForce.h  ClosestPointsAlgo.cpp  ClosestPointsAlgo.h  DivideAndConquer.cpp  DivideAndConquer.h
ClosestPoint/Debug/: vc140.idb
ClosestPoint/Debug/ClosestPoint.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ClosestPoint.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
